examples/ZenohCS/NativeMethods.cs


        /// <summary>
        ///  Reads a configuration from a JSON-serialized string, such as '{mode:"client",connect:{endpoints:["tcp/127.0.0.1:7447"]}}'.
        ///
        ///  Returns 0 in case of success, negative error code otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "zc_config_from_str", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte zc_config_from_str(MaybeUninit* @this, byte* s);

        /// <summary>
        ///  Constructs a json string representation of the `config`, such as '{"mode":"client","connect":{"endpoints":["tcp/127.0.0.1:7447"]}}'.
        ///
        ///  Returns 0 in case of success, negative error code otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "zc_config_to_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte zc_config_to_string(z_loaned_config_t* config, MaybeUninit* out_config_string);

        /// <summary>
        ///  Constructs a configuration by parsing a file at `path`. Currently supported format is JSON5, a superset of JSON.
        ///
        ///  Returns 0 in case of success, negative error code otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "zc_config_from_file", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte zc_config_from_file(MaybeUninit* @this, byte* path);

        /// <summary>
        ///  Constructs a configuration by parsing a file path stored in ZENOH_CONFIG environmental variable.
        ///
        ///  Returns 0 in case of success, negative error code otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "zc_config_from_env", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte zc_config_from_env(MaybeUninit* @this);

        /// <summary>
        ///  Constructs a `z_owned_encoding_t` from a specified substring.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_from_substr", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_encoding_from_substr(MaybeUninit* @this, byte* s, nuint len);

        /// <summary>
        ///  Set a schema to this encoding from a c substring. Zenoh does not define what a schema is and its semantichs is left to the implementer.
        ///  E.g. a common schema for `text/plain` encoding is `utf-8`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_set_schema_from_substr", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_encoding_set_schema_from_substr(z_loaned_encoding_t* @this, byte* s, nuint len);

        /// <summary>
        ///  Set a schema to this encoding from a c string. Zenoh does not define what a schema is and its semantichs is left to the implementer.
        ///  E.g. a common schema for `text/plain` encoding is `utf-8`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_set_schema_from_str", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_encoding_set_schema_from_str(z_loaned_encoding_t* @this, byte* s);

        /// <summary>
        ///  Constructs a `z_owned_encoding_t` from a specified string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_from_str", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_encoding_from_str(MaybeUninit* @this, byte* s);

        /// <summary>
        ///  Constructs an owned non-null-terminated string from encoding
        ///
        ///  @param this_: Encoding.
        ///  @param out_str: Uninitialized memory location where a string to be constructed.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_to_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_encoding_to_string(z_loaned_encoding_t* @this, MaybeUninit* out_str);

        /// <summary>
        ///  Returns a loaned default `z_loaned_encoding_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_loan_default", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_loan_default();

        /// <summary>
        ///  Constructs a default `z_owned_encoding_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_encoding_null", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_internal_encoding_null(MaybeUninit* this_);

        /// <summary>
        ///  Frees the memory and resets the encoding it to its default value.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_drop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_encoding_drop(z_moved_encoding_t* this_);

        /// <summary>
        ///  Returns ``true`` if encoding is in non-default state, ``false`` otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_encoding_check", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_internal_encoding_check(z_owned_encoding_t* this_);

        /// <summary>
        ///  Borrows encoding.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_loan", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_loan(z_owned_encoding_t* this_);

        /// <summary>
        ///  Mutably borrows encoding.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_loan_mut", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_loan_mut(z_owned_encoding_t* this_);

        /// <summary>
        ///  Constructs an owned copy of the encoding in provided uninitilized memory location.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_clone", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_encoding_clone(MaybeUninit* dst, z_loaned_encoding_t* @this);

        /// <summary>
        ///  Returns ``true`` if `this_` equals to `other`, ``false`` otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_equals", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_encoding_equals(z_loaned_encoding_t* this_, z_loaned_encoding_t* other);

        /// <summary>
        ///  Just some bytes.
        ///
        ///  Constant alias for string: `"zenoh/bytes"`.
        ///
        ///  Usually used for types: `uint8_t[]`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_zenoh_bytes", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_zenoh_bytes();

        /// <summary>
        ///  A VLE-encoded signed little-endian 8bit integer. Binary representation uses two's complement.
        ///
        ///  Constant alias for string: `"zenoh/int8"`.
        ///
        ///  Usually used for types: `int8_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_zenoh_int8", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_zenoh_int8();

        /// <summary>
        ///  A VLE-encoded signed little-endian 16bit integer. Binary representation uses two's complement.
        ///
        ///  Constant alias for string: `"zenoh/int16"`.
        ///
        ///  Usually used for types: `int16_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_zenoh_int16", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_zenoh_int16();

        /// <summary>
        ///  A VLE-encoded signed little-endian 32bit integer. Binary representation uses two's complement.
        ///
        ///  Constant alias for string: `"zenoh/int32"`.
        ///
        ///  Usually used for types: `int32_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_zenoh_int32", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_zenoh_int32();

        /// <summary>
        ///  A VLE-encoded signed little-endian 64bit integer. Binary representation uses two's complement.
        ///
        ///  Constant alias for string: `"zenoh/int64"`.
        ///
        ///  Usually used for types: `int64_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_zenoh_int64", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_zenoh_int64();

        /// <summary>
        ///  A VLE-encoded signed little-endian 128bit integer. Binary representation uses two's complement.
        ///
        ///  Constant alias for string: `"zenoh/int128"`.
        ///
        ///  Usually used for types: `int128_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_zenoh_int128", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_zenoh_int128();

        /// <summary>
        ///  A VLE-encoded unsigned little-endian 8bit integer.
        ///
        ///  Constant alias for string: `"zenoh/uint8"`.
        ///
        ///  Usually used for types: `uint8_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_zenoh_uint8", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_zenoh_uint8();

        /// <summary>
        ///  A VLE-encoded unsigned little-endian 16bit integer.
        ///
        ///  Constant alias for string: `"zenoh/uint16"`.
        ///
        ///  Usually used for types: `uint16_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_zenoh_uint16", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_zenoh_uint16();

        /// <summary>
        ///  A VLE-encoded unsigned little-endian 32bit integer.
        ///
        ///  Constant alias for string: `"zenoh/uint32"`.
        ///
        ///  Usually used for types: `uint32_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_zenoh_uint32", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_zenoh_uint32();

        /// <summary>
        ///  A VLE-encoded unsigned little-endian 64bit integer.
        ///
        ///  Constant alias for string: `"zenoh/uint64"`.
        ///
        ///  Usually used for types: `uint64_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_zenoh_uint64", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_zenoh_uint64();
